--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "jobsite",
   "version": "1.0.0",
   "description": "update me",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
-    "test": "update me"
+    "start": "node server/index.js",
+    "test": "jest",
+    "react-dev": "webpack --mode=development --watch",
+    "server-dev": "nodemon server/index.js",
+    "debug": "nodemon --inspect server/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +24,8 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier-eslint": "^13.0.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
