--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
+    "build": "webpack",
     "test": "jest",
     "react-dev": "webpack --mode=development --watch",
     "server-dev": "nodemon server/index.js",
@@ -21,11 +22,21 @@
   },
   "homepage": "https://github.com/PacificDevelopment/JobSite#readme",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
-    "prettier-eslint": "^13.0.0"
+    "html-webpack-plugin": "^5.5.0",
+    "prettier-eslint": "^13.0.0",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
