--- a/package.json
+++ b/package.json
@@ -26,20 +26,31 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
+    "@jest/globals": "^27.4.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.4.4",
+    "jest-summarizing-reporter": "^1.1.4",
+    "msw": "^0.36.3",
     "prettier-eslint": "^13.0.0",
     "react-refresh": "^0.11.0",
+    "supertest": "^6.1.6",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
