--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "express": "^4.17.1",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router": "^6.1.0",
+    "react-router-dom": "^6.1.0"
   }
 }
