--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.4",
+    "axios": "^0.24.0",
+    "careerjet": "^0.3.1",
     "compression": "^1.7.4",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
