--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.4",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.1",
+    "@mui/material": "^5.2.3",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "firebase": "^9.6.1",
