--- a/package.json
+++ b/package.json
@@ -48,15 +48,18 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.4",
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "firebase": "^9.6.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
     "openid-client": "^5.1.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "passport-openid": "^0.4.0",
-    "bcrypt": "^5.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2"
   }
 }
