--- a/package.json
+++ b/package.json
@@ -52,16 +52,22 @@
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.16.4",
-    "bcrypt": "^5.0.1",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "eslint-config-airbnb": "^19.0.2",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "firebase": "^9.6.1",
     "openid-client": "^5.1.0",
     "passport": "^0.5.0",
