--- a/package.json
+++ b/package.json
@@ -51,25 +51,26 @@
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "pg": "^8.7.1",
     "@babel/plugin-transform-runtime": "^7.16.4",
-    "bcrypt": "^5.0.1",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
+    "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^19.0.2",
+    "express": "^4.17.1",
     "firebase": "^9.6.1",
     "openid-client": "^5.1.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "passport-openid": "^0.4.0",
+    "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.1.0",
