--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "cheerio": "^1.0.0-rc.10",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "dotenv": "^10.0.0",
