--- a/package.json
+++ b/package.json
@@ -66,12 +66,15 @@
     "eslint-config-airbnb": "^19.0.2",
     "express": "^4.17.1",
     "firebase": "^9.6.1",
+    "fs": "^0.0.1-security",
     "openid-client": "^5.1.0",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "passport-openid": "^0.4.0",
+    "path": "^0.12.7",
     "pg": "^8.7.1",
+    "pgpass": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.1.0",
