--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "test": "jest",
     "serve-react-dev": "webpack-dev-server --config webpack.config.js",
-    "react-dev": "webpack --mode=development --watch",
+    "react-dev": "webpack -w",
     "server-dev": "nodemon server/index.js",
     "debug": "nodemon --inspect server/index.js"
   },
